packages/ses/test/error/issue-2941/test2/error-trapping-platform-safe.demo.js
import '../../../../index.js';

lockdown({
  errorTaming: 'safe',
  stackFiltering: 'concise',
  errorTrapping: 'platform',
});

throw Error(`Does this place have an
  echo?
`);
